[tool.poetry]
name = "websocket-test"
version = "0.1.0"
description = ""
authors = ["Kenta Fukuhara <105337464+KAkikakuFukuhara@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
websockets = "^16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
